--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "monsterapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/JetimLee/github.io/monsterapp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm build",
+    "deploy": "https://github.com/JetimLee/monsterapp.git"
   },
   "eslintConfig": {
     "extends": [
